FIX: margin was too big for phone screen

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ span {
 }
 
 .board {
-    margin: 30px;
+    margin: 30px 0px;
     display: grid;
     grid-template-columns: repeat(3, 100px);
     justify-items: center;
